Fixed Some Layout Issues

--- a/iAttendTFL_WebApp/wwwroot/css/styles.css
+++ b/iAttendTFL_WebApp/wwwroot/css/styles.css
@@ -198,7 +198,7 @@ footer {
     width: 100%;
     font-size: 12pt;
     padding: 5px 20% 5px 20%;
-    margin-top: 2%;
+    margin-top: 55px;
 }
 
 /* =================================
